--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -9,3 +9,11 @@
   .vp-hero-info-wrapper {
     min-height: 600px;
   }
+
+
+@import "./mobaxterm.scss";
+
+// test
+// .vp-site-name {
+//   font-style: italic;
+// }
