--- a/src/.vuepress/styles/mobaxterm.scss
+++ b/src/.vuepress/styles/mobaxterm.scss
@@ -5,7 +5,7 @@
       width: 100%;
       height: 400px;
       overflow: hidden;
-      border:dashed red($color: #000000) 3px;
+      border:dashed red rgb(0, 0, 0) 3px;
       border-style: dashed;
       border-radius: 40px;
     }
